@@ -1151,8 +1151,8 @@ the mru bookmark stack."
   (define-key semantic-mode-map [f12] 'semantic-ia-fast-jump-or-back)
   (define-key semantic-mode-map [C-f12] 'semantic-ia-fast-jump-or-back)
   (define-key semantic-mode-map [S-f12] 'semantic-ia-fast-jump-back)
-  (define-key semantic-mode-map (kbd "ESC ESC <f12>")
-    'semantic-ia-fast-jump-back)
+  ;; (define-key semantic-mode-map (kbd "ESC ESC <f12>")
+  ;;   'semantic-ia-fast-jump-back)
   ;; (define-key semantic-mode-map [S-f12] 'pop-global-mark)
   (global-set-key [mouse-2] 'semantic-ia-fast-jump-mouse)
   ;; (define-key semantic-mode-map [mouse-2] 'semantic-ia-fast-jump-mouse)
